Fix site-header and controller z-index

--- a/css/main.css
+++ b/css/main.css
@@ -554,7 +554,7 @@ img {
 }
 .site-header {
   position: relative;
-  z-index: 1;
+  z-index: 10;
   padding: 15px 35px;
   background-color: #22b3c1;
 }
@@ -604,6 +604,10 @@ img {
   background-image: url("/img/x-icon.svg");
 }
 
+.site-header--open .site-header__sitenav {
+  z-index: 1000;
+}
+
 @media only screen and (max-width: 900px) {
   .site-header {
     padding: 10px 20px;
@@ -618,7 +622,6 @@ img {
     display: block;
     position: absolute;
     top: 120%;
-    z-index: 1000;
     background-color: #ffffff;
     width: 80%;
   }
@@ -850,7 +853,7 @@ img {
   width: 100%;
   height: 40px;
   text-align: center;
-  z-index: 10;
+  z-index: 2;
   bottom: 30px;
 }
 
@@ -885,7 +888,7 @@ img {
   width: 100%;
   height: 2px;
   background-color: #f6eac5;
-  z-index: 5;
+  z-index: 1.5;
 }
 
 .controller__progressbar-fill {
