--- a/scss/blocks/_controller.scss
+++ b/scss/blocks/_controller.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 40px;
   text-align: center;
-  z-index: 10;
+  z-index: 2;
   bottom: 30px;
 }
 
@@ -38,7 +38,7 @@
   width: 100%;
   height: 2px;
   background-color: #f6eac5;
-  z-index: 5;
+  z-index: 1.5;
 }
 
 
