--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -1,6 +1,6 @@
 .site-header {
   position: relative;
-  z-index: 1;
+  z-index: 10;
   padding: 15px 35px;
   background-color: $primary-color;
 }
@@ -52,6 +52,10 @@
   background-image: url("/img/x-icon.svg");
 }
 
+.site-header--open .site-header__sitenav {
+  z-index: 1000;
+}
+
 
 @include breakpoint-down (900px) {
   .site-header {
@@ -70,7 +74,6 @@
     display: block;
     position: absolute;
     top: 120%;
-    z-index: 1000;
     background-color: $primary-bg-color;
     width: 80%;
   }
